# flashattn2-cpu

./: .gitignore  CMakeLists.txt  README.md  data_generation.py  flash_attn2.cpp  flash_attn2.py  flash_attn2_jit.py  flash_attn2_mt.cpp  naive_attn.cpp  naive_attn.py  plot.py  run.sh  utils.py
flash_attn/: attn.py  attn_numba.py  attn_profile.py  io.py
include/flash_attn/: args.hpp  attn.hpp  io.hpp  types.hpp  verify.hpp  wsq.hpp
profile/: flash_attn2_profile.cpp  flash_attn2_profile.py
src/: attn.cpp  attn_mt.cpp  attn_mt_causal.cpp  attn_profile.cpp  io.cpp
tools/: bench_fa2.cpp  bench_fa2.py  bench_fa2_causal.cpp  bench_fa2_causal_mt.cpp  bench_fa2_mt.cpp  bench_fa2_numba.py  bench_fa2_profile.cpp  bench_fa2_profile.py  bench_naive.cpp  bench_naive.py  bench_naive_causal.cpp  bench_naive_causal.py
